payment section updated

--- a/payment.html
+++ b/payment.html
@@ -60,12 +60,9 @@
           <div id="form">
             <label for=""> Enter Card Number</label>
             <input
-              type="text"
+              type="number"
               id="cardnumber"
               placeholder="Enter Card Number"
-              required="required"
-              minlength="16"
-              maxlength="16"
             />
             <label for=""> Expiry Date</label>
             <input
@@ -75,14 +72,7 @@
               required="required"
             />
             <label for=""> CVV</label>
-            <input
-              type="text"
-              id="Cvv"
-              placeholder="Enter CVV"
-              minlength="3"
-              maxlength="3"
-              required="required"
-            /><br />
+            <input type="number" id="Cvv" placeholder="Enter CVV" /><br />
             <input
               type="text"
               id="OtpOfPayment"
